--- a/example-workflow.yaml
+++ b/example-workflow.yaml
@@ -42,7 +42,7 @@ spec:
           - name: version
           - name: outzarr
             # An fsspec URL is allowed here.
-            value: "/tmp/output.zarr"
+            value: "gs://scratch-170cd6ec/{{ pod.name }}/out.zarr"
       container:
         image: us-central1-docker.pkg.dev/downscalecmip6/private/zarrfromesgf:dev
         env:
@@ -55,15 +55,15 @@ spec:
           - "{{ inputs.parameters.outzarr }}"
         resources:
           requests:
-            memory: 8Gi
+            memory: 2Gi
             cpu: "100m"
           limits:
             memory: 8Gi
-            cpu: "2000m"
+            cpu: "1000m"
       retryStrategy:
         limit: 2
         retryPolicy: "Always"
         backoff:
           duration: 120s
           factor: 3
-      activeDeadlineSeconds: 18000
+      activeDeadlineSeconds: 10800
